edited yml file

--- a/.github/workflows/main_xt-n-si-vjsp-frontend.yml
+++ b/.github/workflows/main_xt-n-si-vjsp-frontend.yml
@@ -20,6 +20,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+      
+      -name: Set Node options
+        run: |
+          NODE_OPTIONS=--openssl-legacy-provider
 
       - name: npm install, build, and test
         run: |
