--- a/.github/workflows/main_xt-n-si-vjsp-frontend.yml
+++ b/.github/workflows/main_xt-n-si-vjsp-frontend.yml
@@ -29,6 +29,9 @@ jobs:
           npm install
           npm run build --configuration=production --if-present
 
+      - name: Zip artifact for deployment
+        run: Compress-Archive -Path ./dist/notus-angular/* -Destination release.zip
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
@@ -48,6 +51,9 @@ jobs:
         with:
           name: node-app
 
+      - name: unzip artifact for deployment
+        run: unzip release.zip
+    
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
